# ur5_arm_ros2

./: CMakeLists.txt  README.md  package.xml
config/: gz_bridge.yaml  marker_detector.yaml  ros2_controllers.yaml  trajectory_goal.yaml  ur5.urdf.xacro  ur_controllers.yaml
hooks/: gz_sim_resource_path.dsv.in  gz_sim_resource_path.sh.in
launch/: gazebo.launch.py  sim.launch.py  spawn_robot.launch.py  test.launch.py  ur5_control.launch.py  view_robot.launch.py
log/: latest_build
meshes/models/apriltags/: model.config  model.sdf
meshes/models/apriltags/materials/scripts/: apriltag_0.material
meshes/models/lar_floor/: model.sdf
meshes/models/lar_table_great/: model.sdf
meshes/models/lar_walls/: model.sdf
rviz/: view.rviz
src/: marker_detector.cpp  motion_planning.cpp  pose_evaluator.cpp
urdf/: _d435.urdf.xacro  cam_support.urdf.xacro  ur.ros2_control.xacro  ur.srdf.xacro  ur.urdf.xacro  ur5_arm.ros2_control.xacro  ur5e.urdf.xacro  ur5e_joint_limited_robot.urdf.xacro  ur_macro.urdf.xacro
urdf/old/: _d435.urdf.xacro  ur5.urdf.xacro  ur5e.urdf.xacro  ur5e_joint_limited_robot.urdf.xacro
worlds/: scene.sdf
